# Polimi_Robotics_Project_2

./: README.md
catkin_ws/src/second_project/: CMakeLists.txt  package.xml
catkin_ws/src/second_project/cfg/: costmap_common_params.yaml  dwa_local_planner_params.yaml  gmapping_params.yaml
catkin_ws/src/second_project/csv/: goals.csv
catkin_ws/src/second_project/launch/: amcl.launch.xml  mapping.launch  navigation.launch
catkin_ws/src/second_project/maps/: map.pgm  map.yaml
catkin_ws/src/second_project/maps/stage/: map.world  robot.inc
catkin_ws/src/second_project/rviz/: rviz_config.rviz
catkin_ws/src/second_project/src/: goal_setter.cpp  odom_to_tf.cpp  scan_combiner_node.cpp
