<?xml version="1.0"?>
<package format="2">
  <name>second_project</name>
  <version>0.0.0</version>
  <description>navigation and slam</description>

  <maintainer email="giovanniannaloro3x5@gmail.cpm">Giovanni</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
    

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
